<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget0"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:focusable="true" 
    android:focusableInTouchMode="true"
    android:excludeFromRecents="true" >

    <EditText
        android:id="@+id/txtNick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hintUsername"
        android:inputType="textFilter|textNoSuggestions" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtNick"
        android:ems="10"
        android:hint="@string/hintPass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/cmdLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtPass"
        android:drawableLeft="@drawable/login"
        android:paddingRight="45dp"
        android:text="@string/cmdLogin" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>